[gd_scene load_steps=5 format=3 uid="uid://bdqn7gj1xmqay"]

[ext_resource type="Script" path="res://ui/overlay/overlay.gd" id="1_puhe0"]
[ext_resource type="Theme" uid="uid://dfureb8blyilx" path="res://ui/themes/default_theme.tres" id="2_tm8nv"]
[ext_resource type="PackedScene" uid="uid://0x4i0g74ey02" path="res://ui/overlay/abilities/ability_slot.tscn" id="3_makk7"]
[ext_resource type="Resource" uid="uid://c61nns7ftkk5a" path="res://entities/bullet/abilities/split_shot/split_shot.tres" id="4_f1343"]

[node name="Overlay" type="Control"]
z_index = 98
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
script = ExtResource("1_puhe0")

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 11
theme_override_constants/margin_bottom = 12

[node name="Viewport" type="Control" parent="Margin"]
layout_mode = 2

[node name="Stats" type="Control" parent="Margin/Viewport"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 30.0
grow_horizontal = 2

[node name="Points" type="Control" parent="Margin/Viewport/Stats"]
layout_mode = 1
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PointsLabel" type="Label" parent="Margin/Viewport/Stats/Points"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 1
offset_right = 40.0
offset_bottom = 16.0
theme = ExtResource("2_tm8nv")
theme_override_font_sizes/font_size = 14
text = "0"

[node name="Turns" type="Control" parent="Margin/Viewport/Stats"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 40.0
grow_horizontal = 2

[node name="TurnsLabel" type="Label" parent="Margin/Viewport/Stats/Turns"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme = ExtResource("2_tm8nv")
theme_override_font_sizes/font_size = 14
text = "0 / 0"
horizontal_alignment = 1

[node name="Ricochets" type="Control" parent="Margin/Viewport/Stats"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0

[node name="RicochetsLabel" type="Label" parent="Margin/Viewport/Stats/Ricochets"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 1
offset_right = 40.0
offset_bottom = 16.0
theme = ExtResource("2_tm8nv")
theme_override_font_sizes/font_size = 14
text = "0"
horizontal_alignment = 2

[node name="Abilities" type="Control" parent="Margin/Viewport"]
texture_filter = 1
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -59.5
offset_top = -27.0
offset_right = 60.5
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="Margin/Viewport/Abilities"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="AbilitySlot" parent="Margin/Viewport/Abilities/HBoxContainer" instance=ExtResource("3_makk7")]
layout_mode = 2
size_flags_horizontal = 3
ability = ExtResource("4_f1343")

[node name="AbilitySlot2" parent="Margin/Viewport/Abilities/HBoxContainer" instance=ExtResource("3_makk7")]
layout_mode = 2
size_flags_horizontal = 3
keybind = 50

[node name="AbilitySlot3" parent="Margin/Viewport/Abilities/HBoxContainer" instance=ExtResource("3_makk7")]
layout_mode = 2
size_flags_horizontal = 3
keybind = 51

[node name="AbilitySlot4" parent="Margin/Viewport/Abilities/HBoxContainer" instance=ExtResource("3_makk7")]
layout_mode = 2
size_flags_horizontal = 3
keybind = 52

[node name="AbilitySlot5" parent="Margin/Viewport/Abilities/HBoxContainer" instance=ExtResource("3_makk7")]
layout_mode = 2
size_flags_horizontal = 3
keybind = 53
